fix: modified module file to fix media access issue on looping background video + modified pom.xml file to install dependencies needed